@@ -82,6 +82,8 @@ Show full media info
 Create a new file or directory
 .It Ic ^R
 Rename selected entry
+.It Ic R
+Rename directory entries
 .It Ic s
 Toggle sort by file size
 .It Ic S, ^J
